'use strict'

const Model = use('Model')

class StudyName extends Model {
}

module.exports = StudyName
